Feat: added card slider in popular drama list

--- a/frontend/page/index/index.popularDramaList.ejs
+++ b/frontend/page/index/index.popularDramaList.ejs
@@ -7,6 +7,10 @@
             </div>
             <div class="popular-drama-header-underline"></div>
         </div>
-        <div id="popularDramaPhotoContainer" class="popular-drama-photo-container"></div>
+        <div class="popular-drama-photo-outer-container">
+            <img class="popular-drama-prev-btn" id="popularDramaPrevBtn" src="/img/icon_left_arrow.png">
+            <div class="popular-drama-photo-container" id="popularDramaPhotoContainer"></div>
+            <img class="popular-drama-next-btn" id="popularDramaNextBtn" src="/img/icon_right_arrow.png">
+        </div>
     </div>
 </div>
