--- a/frontend/public/css/common.css
+++ b/frontend/public/css/common.css
@@ -15,7 +15,7 @@ a:visited {
 }
 
 a:visited:hover {
-    color: #000;
+    color: rgb(2, 177, 247);
 }
 
 body {
@@ -113,6 +113,10 @@ html {
     flex: none;
     margin: 0px 20px 0px 10px;
     cursor: pointer;
+}
+
+.nav-bar-right-title-add-drama:hover {
+    color: rgb(2, 177, 247);
 }
 
 .nav-bar-right-title-signin-icon {
