--- a/frontend/page/signin/signin.form.ejs
+++ b/frontend/page/signin/signin.form.ejs
@@ -5,10 +5,10 @@
             <div class="signin-header">會員登入</div>
 
             <div class="signin-email-title">電子信箱:</div>
-            <input id="signinEmail" class="signin-email-input" type="text">
+            <input id="signinEmail" class="signin-email-input" type="text" value="test@test.com">
 
             <div class="signin-password-title">密碼:</div>
-            <input id="signinPassword" class="signin-password-input" type="password">
+            <input id="signinPassword" class="signin-password-input" type="password" value="12345678">
 
             <div id="handleSigninBtn" class="signin-btn">登入帳戶</div>
 
