--- a/frontend/public/css/index.css
+++ b/frontend/public/css/index.css
@@ -249,7 +249,6 @@
 
 .latest-drama-photo-bottom-line {
     position: relative;
-    bottom: -33px;
     width: 100%;
     height: 7px;
     border-radius: 0px 0px 10px 10px;
@@ -277,6 +276,7 @@
 
 .latest-drama-photo-individual-title,
 .popular-drama-photo-individual-title {
+    height: 24%;
     margin: 10px;
     padding: 5px;
     font-size: 19px;
