Feat: added card slider in latest drama list

--- a/frontend/page/index/index.latestDramaList.ejs
+++ b/frontend/page/index/index.latestDramaList.ejs
@@ -7,6 +7,11 @@
             </div>
             <div class="latest-drama-header-underline"></div>
         </div>
-        <div id="latestDramaPhotoContainer" class="latest-drama-photo-container"></div>
+        
+        <div class="latest-drama-photo-outer-container">
+            <img class="latest-drama-prev-btn" id="latestDramaPrevBtn" src="/img/icon_left_arrow.png">
+            <div class="latest-drama-photo-container" id="latestDramaPhotoContainer"></div>
+            <img class="latest-drama-next-btn" id="latestDramaNextBtn" src="/img/icon_right_arrow.png">
+        </div>
     </div>
 </div>
