Update: hide latest card slider in RWD

--- a/frontend/public/css/index.css
+++ b/frontend/public/css/index.css
@@ -392,7 +392,9 @@
     }
 
     .popular-drama-prev-btn,
-    .popular-drama-next-btn {
+    .popular-drama-next-btn,
+    .latest-drama-prev-btn,
+    .latest-drama-next-btn {
         display: none;
     }
 
