Update: change status script URL to new domain

--- a/frontend/page/index/index.script.ejs
+++ b/frontend/page/index/index.script.ejs
@@ -10,7 +10,7 @@
 
     gtag("config", "G-P69DN7D25D");
 </script>
-<script src="https://status.jprogrammer.site/script.js" data-website-id="c7afe6ae-3f77-40da-8443-b761233c532b"></script>
+<script src="https://status.jprogrammer.online/script.js" data-website-id="c7afe6ae-3f77-40da-8443-b761233c532b"></script>
 
 </body>
 
